2005-02-28  Dan Winship  <danw@novell.com>

	* gtk/Container.custom (ChildType): fix this to just call
	gtk_container_child_type().

	* gtk/glue/container.c (gtksharp_container_base_child_type): kill

2005-02-28  Mike Kestner  <mkestner@novell.com>

	* glib/Idle.cs : add locking on the source_handlers.
	* glib/Source.cs : add locking on the source_handlers.
	* glib/Timeout.cs : add locking on the source_handlers.

2005-02-25  Mike Kestner  <mkestner@novell.com>

	* glib/Source.cs : remove from the hash by key.
	* glib/Idle.cs : remove from the hash by key.

2005-02-23  Dan Winship  <danw@novell.com>

	* sources/gnomedb.patch: Patch over a bug in gnome-db-editor.h

	* gnomedb/gnomedb-api.raw: Regen

2005-02-23  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl (parseTypeToken): don't parse punctuation
	into the type name. [Fixes #72925]

	* gtk/gtk-api.raw: Regen, exposing the previously-broken
	AccelGroup.AccelActivate, AccelMap.Changed,
	ActionGroup.ConnectProxy, ActionGroup.DisconnectProxy,
	ActionGroup.PreActivate, ActionGroup.PostActivate, and
	Widget.EventAfter.

	* gtk/Gtk.metadata: Give proper names to the parameters of those
	signals

2005-02-23  Dan Winship  <danw@novell.com>

	* generator/Field.cs (Validate): new, to check that a field has a
	valid type (or is hidden).

	* generator/StructBase.cs (Validate): new, to check that all of
	the struct fields have valid types

	* generator/BoxedGen.cs (Generate):
	* generator/StructGen.cs: (Generate): Call Validate() and bail out
	if it fails; it's no good to generate a struct with the wrong
	layout.

	* gdk/gdk-symbols.xml: add a line for GdkKey -> Gdk.Key. (There's
	no actual C type GdkKey, but we can use metadata to change uints
	to GdkKeys, which will then become Gdk.Keys.)

	* gtk/AccelKey.custom: remove the "Key" field (which was being
	added in the wrong place in the struct), since it's properly
	generated now.

	* gtk/Gtk.metadata: Fix the line that renames AccelKey.AccelKey
	to AccelKey.Key
